Import patch from mainline to fix decoding DWARF information in the BFD library.

PR 26520
	* dwarf2.c (scan_unit_for_symbols): Add member entries to the
	variable table.